Fixed image icon blurry bug

--- a/src/App.css
+++ b/src/App.css
@@ -86,12 +86,24 @@
   display: flex;
   justify-content: center;
   align-items: center;
-  box-shadow: inset 0 0 10px #000000b7;
   border-radius: 50%;
   width: 125px;
   height: 125px;
   overflow: hidden;
   position: relative;
+  z-index: 1;
+}
+
+.image-icon::before {
+  content: "";
+  position: absolute;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
+  box-shadow: inset 0 0 10px #000000b7;
+  border-radius: 50%;
+  z-index: -1;
 }
 
 .image-lg {
@@ -146,13 +158,24 @@
   }
 
   .image-icon {
-    background-color: #ffdfd1;
-    box-shadow: inset 0 0 10px #000000b7;
     border-radius: 50%;
     width: 225px;
     height: 225px;
     overflow: hidden;
     position: relative;
+    z-index: 1;
+  }
+
+  .image-icon::before {
+    content: "";
+    position: absolute;
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 100%;
+    box-shadow: inset 0 0 10px #000000b7;
+    border-radius: 50%;
+    z-index: -1;
   }
 
   .image-icon-container {
